deployment-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-v1
spec:
  replicas: 2
  minReadySeconds: 5
  selector:
    matchLabels:
      app: myapp
      version: v1
  template:
    metadata:
      name: myapp-v1
      labels:
        app: myapp
        version: v1
    spec:
      containers:
      - name: myapp
        image: chukmunnlee/timeapp@sha256:db559aba23616f8387170ee5d5f3e5d1830037c441eec3925415b3d60f0ae60b
        resources:
          requests:
            cpu: "100m"
            memory: "16Mi"
        ports:
        - containerPort: 3000
