deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-v2
spec:
  replicas: 2
  minReadySeconds: 5
  selector:
    matchLabels:
      app: myapp
      version: v2
  template:
    metadata:
      name: myapp-v2
      labels:
        app: myapp
        version: v2
    spec:
      containers:
      - name: myapp
        image: chukmunnlee/timeapp@sha256:5adfecb6bcc59ff4b57a206ce543b95a864e4c348100dca594203f83465ade41
        resources:
          requests:
            memory: "16Mi"
            cpu: "100m"
        ports:
        - containerPort: 3000
