service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
spec:
  selector:
    app: myapp
  type: NodePort
  ports:
  - port: 3000
    targetPort: 3000
