istio-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress

metadata:
   name: istio-ingress
   annotations:
      kubernetes.io/ingress.class: istio
spec:
   rules:
   - http:
      paths:
      - path: /v1
        backend:
           serviceName: myapp
           servicePort: 3000
