virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: myapp
spec:
  hosts:
  - "*"
  gateways:
  - myapp-gateway
  http:
  - match:
    - uri:
        exact: /v1
    route: 
    - destination:
        host: myapp
        port: 
          number: 3000
        subset: v1
    rewrite:
      uri: /
  - match:
    - uri:
        exact: /v2
    route:
    - destination:
        host: myapp
        port: 
          number: 3000
        subset: v2
    rewrite:
      uri: /
